...
              onPressed: () {
                Navigator.of(context).pop(false);
              },
              child: const Text('Cancel'),
            ),
            TextButton(
              key: const Key("confirm"),
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: const Text('Confirm'),
            ),
          ],
...

    if (confirmed != null && confirmed) {
      context.read<UserBloc>().add(
            UpdateUser(
                User(
                  id: context.read<UserSessionBloc>().state.id,
                  username: _usernameController.text,
                  email: _emailController.text,
                  joinDate: context.read<UserSessionBloc>().state.joinDate,
                  role: context.read<UserSessionBloc>().state.role,
                ),
                _passwordController.text),
          );
    }
...
              onPressed: () {
                Navigator.of(context).pop(false);
              },
              child: const Text('Cancel'),
            ),
            TextButton(
              key: const Key("terminated"),
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: const Text('Confirm'),
            ),
          ],
...
                                ),
                                SizedBox(
                                  width: 5,
                                ),
                                Flexible(
                                  child: Text(
                                    'Account updated successfully.',
                                    textAlign: TextAlign.center,
                                    style: TextStyle(
                                      fontSize: 18.0,
                                    ),
                                  ),
                                )
...
                                style: const TextStyle(color: Colors.white),
                              ),
                            ],
                          ),
                          const SizedBox(height: 10),
                          TextField(
                            key: const Key("username_field"),
                            controller: _usernameController,
                            style: const TextStyle(color: Colors.grey),
                            decoration: InputDecoration(
                              labelText: 'Username',
                              labelStyle: const TextStyle(color: Colors.grey),
                              prefixIcon: const Icon(Icons.person),
...
                              prefixIcon: const Icon(Icons.email),
                              prefixIconColor: Colors.blue[700],
                            ),
                          ),
                          const SizedBox(height: 10),
                          TextField(
                            key: const Key("newPassword"),
                            controller: _passwordController,
                            obscureText: true,
                            style: const TextStyle(color: Colors.grey),
                            decoration: InputDecoration(
                              labelText: 'New Password',
                              labelStyle: const TextStyle(color: Colors.grey),
...
                          ),
                          const SizedBox(height: 20),
                          ButtonBar(
                            alignment: MainAxisAlignment.center,
                            children: [
                              ElevatedButton.icon(
                                key: const Key("terminate"),
                                onPressed: _showDeleteConfirmationDialog,
                                style: ButtonStyle(
                                  backgroundColor: MaterialStateProperty.all(
                                      Colors.red[700]),
                                ),
                                label: const Text('Terminate'),
                                icon: const Icon(Icons.dangerous_rounded),
                              ),
                              const SizedBox(width: 10),
                              ElevatedButton.icon(
                                key: const Key("update"),
                                onPressed: _showUpdateConfirmationDialog,
                                style: ButtonStyle(
                                  backgroundColor: MaterialStateProperty.all(
                                      Colors.blue[700]),
                                ),
                                label: const Text('Update'),
...
