...
                title: const Text("C R E A T E   A C C O U N T"),
                onTap: () {
                  context.go('/register');
                },
              ),
              ListTile(
                key: const Key("logout"),
                leading: const Icon(Icons.logout),
                title: const Text("L O G   O U T"),
                onTap: () {
                  BlocProvider.of<UserSessionBloc>(context)
                      .add(UserSessionLogout());
                  context.go('/');
...
                label: 'Favorites',
                backgroundColor: _selectedIndex == 1
                    ? Colors.blueGrey[800]
                    : Colors.transparent,
              ),
              BottomNavigationBarItem(
                key: const Key("profile_icon"),
                icon: const Icon(Icons.person_rounded),
                label: 'Profile',
                backgroundColor: _selectedIndex == 2
                    ? Colors.blueGrey[800]
                    : Colors.transparent,
              ),
...
